<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:minWidth="300dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/gradientbackground">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="Edit Breeder Profile"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_ratio_m_f"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Birth Weight, KG"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/birth_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weaning Weight, KG"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/weaning_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/litter_size_born_alive"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/litter_size_born_alive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_at_first_mating"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/age_at_first_mating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_at_weaning"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/age_at_weaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pedigree"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/pedigree_mother"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Mother's Pedigree"
                    android:inputType="text|number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pedigree"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/pedigree_father"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Father's Pedigree"
                    android:inputType="text|number"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>